Fix scrolling on mobile, hide page edit link

--- a/_assets/stylesheets/styles.css
+++ b/_assets/stylesheets/styles.css
@@ -92,6 +92,7 @@ article, aside, footer {
     background: #f5f7f8;
     border-right: 1px solid #ebecee;
     z-index: 1;
+    -webkit-overflow-scrolling: touch;
 }
 
 #page-tree {
@@ -232,6 +233,7 @@ article, aside, footer {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    -webkit-overflow-scrolling: touch;
 }
 
 #markdown-toc + #page-article {
@@ -647,6 +649,10 @@ footer
 
     .faux-columns {
         background-image: none;
+    }
+
+    #page-edit-link {
+        display: none;
     }
 
     #markdown-toc {
